--- a/index.html
+++ b/index.html
@@ -40,7 +40,63 @@
 <a href="" class="ml-5 btn btn-primary btn-lg">Coleção de frutas</a>
   </div>
 
+<div class="container us mt-5">
 
+<h2 class="d-flex justify-content-center mb-5"> <div class="b">Nossos </div> Produtos</h2>
+
+<div class="row">
+  <div class="col-sm-4">
+    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+      <img src="img/fernando-andrade-nAOZCYcLND8-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ananás</h5>
+        <p class="card-text">500Kz</p>
+        <a href="#" class="btn btn-primary  btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-sm-4">
+
+    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+      <img src="img/mockup-graphics-haSJEJYzl5A-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pera</h5>
+        <p class="card-text">100kz</p>
+        <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-sm-4">
+
+    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+      <img src="img/mockup-graphics-Kl3467edwsE-unsplash.jpg" height="250px"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Banana</h5>
+        <p class="card-text">100Kz</p>
+        <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="lojafruta">
+  <div class="row">
+<div class="col-sm 6 mb-5">
+<img src="img/philippe-collard-QLVX4LPeA1A-unsplash.jpg" width="500px" height="300px" alt="">
+</div>
+<div class="col-sm 6">
+  <h2>Somos a <div class="c">LojaFruta</div></h2>
+  <p class="text">
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Aliquid doloribus maxime unde odit mollitia provident <br> veniam omnis similique exercitationem expedita saepe accusamus,<br> consequuntur ipsa nihil eos enim quia minus, quibusdam <br> repellendus debitis modi cupiditate voluptates impedit! <br> Aliquid adipisci, quo, beatae iure exercitationem <br> ex nulla ullam similique quasi laudantium dicta error.
+  </p>
+  <a href="" class="btn btn-primary">Ler mais</a>
+</div>
+
+  </div>
+</div>
+</div>
 
 
 
