--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
 </div>
 </div>
 
+<footer class="rodape mt-5  pt-2 pb-2">
+
+  <p class="text container">Copyright &copy; 2021 Márcia Manuel Todos os Direitos Reservados</p>
+</footer>
+
 
 
 
