--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/dashboard.css">
 
 
- <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
   <title>Frutaloja</title>
 </head>
@@ -19,16 +20,17 @@
     <nav class="menu navbar navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
         <a href="" class="navbar-brand">FrutaLoja</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2  mt-2 d-flex align-items-end">
-          <li class="nav-item "><a href="" class="nav-link">HOME</a></li>
-          <li class="nav-item"><a href="" class="nav-link">LOJA</a></li>
-          <li class="nav-item"><a href="" class="nav-link">SOBRE NÓS</a></li>
+          <ul class="justify-content-center navbar-nav me-auto mb-2  mt-2">
+            <li class="nav-item "><a href="" class="nav-link">HOME</a></li>
+            <li class="nav-item"><a href="" class="nav-link">LOJA</a></li>
+            <li class="nav-item"><a href="" class="nav-link">SOBRE NÓS</a></li>
 
-        </ul>
+          </ul>
         </div>
       </div>
     </nav>
@@ -36,76 +38,140 @@
   <div class="banner">
     <h1 class="text">Deliciosas e Sensacionais</h1>
 
-<a href="" class="ml-5 btn btn-primary btn-lg">Coleção de frutas</a>
+
   </div>
 
-<div class="container us mt-5">
+  <div class="container us mt-5">
 
-<h2 class="d-flex justify-content-center mb-5"> <div class="b">Nossos </div> Produtos</h2>
+    <h2 class="d-flex justify-content-center mb-5">
+      <div class="b">Nossos </div> Produtos
+    </h2>
 
-<div class="row">
-  <div class="col-sm-4">
-    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
-      <img src="img/fernando-andrade-nAOZCYcLND8-unsplash.jpg" height="250px" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Ananás</h5>
-        <p class="card-text">500Kz</p>
-        <a href="#" class="btn btn-primary  btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+    <div class="row card1">
+      <div class="col-sm-4">
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/fernando-andrade-nAOZCYcLND8-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ananás</h5>
+            <p class="card-text">500Kz</p>
+            <a href="#" class="btn btn-primary  btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-sm-4">
+
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/mockup-graphics-haSJEJYzl5A-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Pera</h5>
+            <p class="card-text">100kz</p>
+            <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/mockup-graphics-Kl3467edwsE-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Banana</h5>
+            <p class="card-text">100Kz</p>
+            <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
       </div>
     </div>
 
-  </div>
-  <div class="col-sm-4">
+    <div class="lojafruta mb-5">
+      <div class="row">
+        <div class="col-sm 6 mb-5">
+          <img src="img/philippe-collard-QLVX4LPeA1A-unsplash.jpg" height="300px" alt="">
+        </div>
+        <div class="col-sm 6">
+          <h2>Somos a <div class="c">LojaFruta</div>
+          </h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Aliquid doloribus maxime unde odit mollitia
+            provident <br> veniam omnis similique exercitationem expedita saepe accusamus,<br> consequuntur ipsa nihil
+            eos enim quia minus, quibusdam <br> repellendus debitis modi cupiditate voluptates impedit! <br> Aliquid
+            adipisci, quo, beatae iure exercitationem <br> ex nulla ullam similique quasi laudantium dicta error.
+          </p>
+          <a href="" class="btn btn-primary">Ler mais</a>
+        </div>
 
-    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
-      <img src="img/mockup-graphics-haSJEJYzl5A-unsplash.jpg" height="250px" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pera</h5>
-        <p class="card-text">100kz</p>
-        <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+      </div>
+    </div>
+    <h2 class="d-flex justify-content-center">
+      <div class="c">Nossas</div>Notícias
+    </h2>
+
+
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/amit-lahav-rxN2MRdFJVg-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Maçã</h5>
+            <p class="card-text">Melhora a função cerebral,
+              é boa para o coração,
+              diminui o risco de diabetes,
+              previne o câncer,
+              combate a asma e
+              fortalece o sistema imunológico.</p>
+            <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/mockup-graphics-XiWQbLEhFyo-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Romã</h5>
+            <p class="card-text">Prevenir câncer,
+              prevenir Alzheimer,
+              evitar doenças do coração,
+              reduzir a pressão arterial,
+              manter a saúde da pele e
+              combater a diarreia.
+             
+              </p>
+            <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
+          <img src="img/mockup-graphics-ZBXPPacUsVs-unsplash.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Laranja</h5>
+            <p class="card-text">
+              Protege contra doenças cardiovasculares,
+              ajuda a controlar a glicemia,
+              retarda o envelhecimento,
+              melhora a saúde dos olhos e
+              previne a anemia.</p>
+            <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
-  <div class="col-sm-4">
 
-    <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
-      <img src="img/mockup-graphics-Kl3467edwsE-unsplash.jpg" height="250px"  class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Banana</h5>
-        <p class="card-text">100Kz</p>
-        <a href="#" class="btn btn-primary btn-lg p-2"><i class="bi bi-bag"></i>comprar</a>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="lojafruta">
-  <div class="row">
-<div class="col-sm 6 mb-5">
-<img src="img/philippe-collard-QLVX4LPeA1A-unsplash.jpg" width="500px" height="300px" alt="">
-</div>
-<div class="col-sm 6">
-  <h2>Somos a <div class="c">LojaFruta</div></h2>
-  <p class="text">
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Aliquid doloribus maxime unde odit mollitia provident <br> veniam omnis similique exercitationem expedita saepe accusamus,<br> consequuntur ipsa nihil eos enim quia minus, quibusdam <br> repellendus debitis modi cupiditate voluptates impedit! <br> Aliquid adipisci, quo, beatae iure exercitationem <br> ex nulla ullam similique quasi laudantium dicta error.
-  </p>
-  <a href="" class="btn btn-primary">Ler mais</a>
-</div>
 
-  </div>
-</div>
-</div>
+  <footer class="rodape mt-5  pt-2 pb-2">
 
-<footer class="rodape mt-5  pt-2 pb-2">
-
-  <p class="text container">Copyright &copy; 2021 Márcia Manuel Todos os Direitos Reservados</p>
-</footer>
+    <p class="text container">Copyright &copy; 2022 Márcia Manuel Todos os Direitos Reservados</p>
+  </footer>
 
 
 
 
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/js.min.js"></script>
+  <script src="js/jquery3.5.1.js"></script>
 
 
 </body>
